@@ -1,3 +1,8 @@
+2004-06-21  Nick Clifton  <nickc@redhat.com>
+
+	* coffcode.h (styp_to_sec_flags): Ignore IMAGE_SCN_MEM_NOT_PAGED
+	flags.
+
 2004-06-17  Jerome Guitton  <guitton@gnat.com>
 
 	* bfd-in.h (bfd_cache_close_all): New function declaration.
